--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @tailwindcss/cli -i ./css/input.css -o ./css/output.css",
+    "build": "npx @tailwindcss/cli -i ./css/input.css -o ./css/output.css --minify",
     "dev": "npx @tailwindcss/cli -i ./css/input.css -o ./css/output.css --watch"
   },
   "repository": {
