--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "npm run build-css-once && vite build",
     "preview": "vite preview",
     "build-css": "tailwindcss -i ./css/input.css -o ./css/output.css --watch",
-    "build-css-once": "tailwindcss -i ./css/input.css -o ./css/output.css"
+    "build-css-once": "tailwindcss -i ./css/input.css -o ./css/output.css",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.17",
     "vite": "^5.0.0"
