--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
   "theme_color": "#4F46E5",
   "icons": [
     {
-      "src": "img/favicon.svg",
+      "src": "../img/favicon.svg",
       "sizes": "48x48 72x72 96x96 128x128 256x256",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "img/favicon.png",
-      "sizes": "192x192",
+      "src": "../img/favicon.png",
+      "sizes": "128x128",
       "type": "image/png",
       "purpose": "any maskable"
     }
@@ -23,11 +23,7 @@
   "lang": "en",
   "dir": "ltr",
   "orientation": "any",
-  "categories": [
-    "developer tools",
-    "web development",
-    "utilities"
-  ],
+  "categories": ["developer tools", "web development", "utilities"],
   "shortcuts": [
     {
       "name": "Documentation",
@@ -36,8 +32,8 @@
       "url": "/#documentation",
       "icons": [
         {
-          "src": "img/favicon.png",
-          "sizes": "192x192"
+          "src": "../img/favicon.png",
+          "sizes": "128x128"
         }
       ]
     },
@@ -48,23 +44,23 @@
       "url": "/#examples",
       "icons": [
         {
-          "src": "img/favicon.png",
-          "sizes": "192x192"
+          "src": "../img/favicon.png",
+          "sizes": "128x128"
         }
       ]
     }
   ],
   "screenshots": [
     {
-      "src": "img/favicon.png",
+      "src": "../img/favicon.png",
       "sizes": "1280x720",
       "type": "image/png",
       "platform": "wide",
       "label": "Compomint Homepage"
     },
     {
-      "src": "img/favicon.png",
-      "sizes": "1280x720",
+      "src": "../img/favicon.png",
+      "sizes": "128x128",
       "type": "image/png",
       "platform": "wide",
       "label": "Compomint Code Examples"
