--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
   "homepage": "https://github.com/kurukona/compomint-website#readme",
   "dependencies": {
     "@playwright/test": "^1.53.2",
+    "codemirror": "^5.65.2",
     "compomint": "^1.1.2",
     "playwright": "^1.53.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "gh-pages": "^6.3.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.4.32",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.17",
     "vite": "^5.0.0"
   }
